rhdlc/test/compile-fail/multiple-definition-fn-mod-struct/expected.txt
error: the name `b` is defined multiple times
 --> top.rhdl:1:3
  |
1 | fn b() {}
  |    ^ previous definition of the type `b` here
3 | struct b {}
  |        - `b` redefined here
